@@ -427,6 +427,7 @@ newtype ConfirmationEffect
     (A.FromJSON, A.ToJSON)
     via A.CustomJSON (JSONSettings "MkConfirmationEffect" "") ConfirmationEffect
 
+-- | Users will receive notification emails when they validate their email address and turn on email notifications.
 userEmailPreferencesGet ::
   (MonadLogger m, MonadSeldaPool m) =>
   IdentifierUser ->
@@ -434,11 +435,15 @@ userEmailPreferencesGet ::
 userEmailPreferencesGet userIdentifier = do
   lift $ logDebug $ "Get Email preferences" <> T.pack (show userIdentifier)
   user <- userGet userIdentifier
-  -- TODO: Actually add email preference option for user.
   if userEmailValidated user
-    then do
-      lift $ logDebug "Got Email preferences."
-      pure $ MkEmailPreferencesSend $ userEmail user
+    then
+      if userEmailNotifications user
+        then do
+          lift $ logDebug "User will receive notification."
+          pure $ MkEmailPreferencesSend $ userEmail user
+        else do
+          lift $ logDebug "User doesn't prefer email notifications."
+          pure MkEmailPreferencesDontSendNotValidated
     else do
       lift $ logDebug "User didn't validate the Email address."
       pure MkEmailPreferencesDontSendNotValidated
@@ -447,6 +452,7 @@ type EmailPreferences :: Type
 data EmailPreferences
   = MkEmailPreferencesSend EmailAddress
   | MkEmailPreferencesDontSendNotValidated
+  | MkEmailPreferencesDontSendNoNotifications
   deriving stock (Eq, Generic, Ord, Read, Show)
   deriving
     (A.FromJSON, A.ToJSON)
